Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1064

Code completion doesn't work on ui member of GUI project upon creation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • Qt Creator 1.3.83 (2.0.0-beta)
    • Editors
    • Windows 7 (64)

      If I create a GUI project, go straight to MainWindow's constructor, and try to operate on the ui member, the code completion doesn't work (Creator also fails to locate ui_mainwindow.h as an include).

      MainWindow::MainWindow(QWidget *parent) :
      QMainWindow(parent),
      ui(new Ui::MainWindow)
      {
      ui-> // Don't get code completion here.
      }

      Even if I close the editor and reopen it the problem persists. It goes away when I restart Creator and reload the project.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            leamelo Leandro T. C. Melo
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes