Fix ui completion for new projects

The UI_DIR and MOC_DIR weren't added to the includepath for new
projects, since at the time of parsing the directories don't exist yet.

We now always add UI_DIR and MOC_DIR to the include path, without caring
whether they exist.

Task-Nr:  QTCREATORBUG-1064
Reviewed-By: ossi